feat: add Domains info in the ping api
